languages/montiarc-fe/src/test/resources/arc4/coco/invalid/DefaultParametersHaveWrongOrder.arc
package invalid;


component DefaultParametersHaveWrongOrder(int x = 5, int y) {

}